--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ python:
   - "3.6"
   - "3.7"
 install:
-  - pip install pytest-cov codecov
+  - pip install codecov
   - python setup.py install
 script:
   - python setup.py lint
-  - pytest --cov
+  - coverage run setup.py test
 after_success:
   - codecov
