--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,7 +10,18 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.9
+    - name: Lint
+      run: |
+        python setup.py lint
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -26,9 +37,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install codecov
         python setup.py install
-    - name: Lint
-      run: |
-        python setup.py lint
     - name: Test with coverage
       run: |
         coverage run setup.py test
+        codecov
