--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -10,6 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
+
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -21,6 +22,7 @@ jobs:
     - name: Lint
       run: |
         python setup.py lint
+
   test:
     runs-on: ubuntu-latest
     strategy:
@@ -35,6 +37,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install codecov
         python setup.py install
     - name: Test with coverage
       run: |
